--- a/programador web wy/pagina sobre nos SkinPerfect/Sobrenos.html
+++ b/programador web wy/pagina sobre nos SkinPerfect/Sobrenos.html
@@ -12,8 +12,8 @@
 <body>
     <section id="sobrenos"">
         <header class="imagem-topo">
-             <img class="imagem" alt="">
-             <h2 class="textotop">Sobre <span style="color: #522C27;"> Nós</span></h2>
+            <img class="imgto" src="perfect.jpg" alt="">
+             <h2 class="textotop">Sobre <span id="nos">Nós</span></h2>
         </header>
 
         </div>
